--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,27 +10,33 @@ a {
   text-decoration: none;
 }
 
-#music {
+#music,
+.music {
   background: #ff8360;
 }
 
-#science {
+#science,
+.science {
   background: #7dce82;
 }
 
-#food-drink {
+#food-drink,
+.food-drink {
   background: #9b7ede;
 }
 
-#film-tv {
+#film-tv,
+.film-tv {
   background: #ff6b6b;
 }
 
-#geography {
+#geography,
+.geography {
   background: #37cdc5;
 }
 
-#random {
+#random,
+.random {
   background: #ffdc81;
 }
 
