--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,22 +14,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Fredoka:wght@700&family=Montserrat:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../public/css/style.css" />
-    <script defer src="../public/js/quiz.js"></script>
+    
+    
   </head>
-  <body>
+  <body> --}}
     <nav class="navbar navbar-expand navbar-dark py-2 fixed-top">
       <div class="container">
         <!-- <img
@@ -68,9 +56,9 @@
           <div class="col-md-3">
             <div class="card category-card text-dark science" id="science">
               <div class="card-body text-center">
-                <div class="h1 mt-2">
+                <div class="h1 mt-2"> 
                   <i class="bi bi-search"></i>
-                </div>
+                </div> 
                 <h3 class="card-title mb-2">Science</h3>
               </div>
             </div>
@@ -207,6 +195,6 @@
         </div>
       </div>
     </section>
-    <script src="../public/js/signup.js"></script>
-  </body>
-</html>
+    <script src="/js/signup.js"></script>
+  {{!-- </body>
+</html> --}}
