renamed files etc

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand navbar-dark py-2 fixed-top">
       <div class="container">
         <!-- <img
-          src="../public/assets/image.png"
+          src="/assets/image.png"
           alt="welcome image"
           class="nav-image"
         /> -->
