--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,7 +20,7 @@
     />
     <link rel="stylesheet" href="../public/css/style.css" />
   </head>
-  <body>
+  <body> --}}
     <section class="p-5 m-5">
       <div class="container">
         <div class="row text-center justify-content-center align-items-center">
@@ -78,6 +78,6 @@
         </div>
       </div>
     </section>
-    <script src="../public/js/login.js"></script>
-  </body>
-</html>
+    <script src="/js/login.js"></script>
+  {{!-- </body>
+</html> --}}
