--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../public/css/style.css" />
     <script defer src="../public/js/quiz.js"></script>
   </head>
-  <body>
+  <body> --}}
     <section class="p-5 m-5">
       <div class="container">
         <div class="row text-center g-4 justify-content-center">
@@ -59,6 +59,6 @@
         </div>
       </div>
     </section>
-    <script src="../public/js/signup.js"></script>
-  </body>
-</html>
+    <script src="/js/signup.js"></script>
+  {{!-- </body>
+</html> --}}
