--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,10 +13,35 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" type = "text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <script defer src="/js/quiz.js"></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand navbar-dark py-2 fixed-top">
+      <div class="container">
+        <!-- <img
+          src="/assets/image.png"
+          alt="welcome image"
+          class="nav-image"
+        /> -->
+        <a href="./quiz.html" class="navbar-brand">Trivia Game</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="./login.html" class="nav-link">Log out</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="flex-column justify-space-around">
       <header class="display-flex justify-space-between align-center p-2">
         <nav>
