--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,11 @@
 <section class="p-5">
-  <div class="container">
-    <div class="row row-cols-md-3 text-center g-4">
+  <div class="categories-container">
+    <div class="row text-center mb-5">
+      <div class="col">
+        <h1 class=".choose-category-head">Choose a category to play</h1>
+      </div>
+    </div>
+    <div class="row row-cols-md-3 text-center g-5">
       <div class="col-md">
         <div class="card category-card text-dark science" id="science">
           <div class="card-body text-center">
