--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,14 +17,15 @@
     <script defer src="/js/quiz.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand navbar-dark py-2 fixed-top">
+    <nav class="navbar navbar-expand navbar-dark py-2 fixed-top text-dark">
       <div class="container">
-        <!-- <img
-          src="/assets/image.png"
-          alt="welcome image"
+        <img
+          src="/assets/images/icon.jpg
+          "
+          alt="head with gears image"
           class="nav-image"
-        /> -->
-        <a href="./quiz.html" class="navbar-brand">Trivia Game</a>
+        />
+        <a href="./quiz.html" class="navbar-brand text-dark">Trivia Game</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,9 +35,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="./login.html" class="nav-link">Log out</a>
+          <ul class="navbar-nav ms-auto text-dark">
+            <li class="nav-item text-dark">
+              <a href="./login.html" class="nav-link text-dark">Log out</a>
             </li>
           </ul>
         </div>
