refactered some code

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <img
           src="/assets/images/icon.jpg
           "
-          alt="head with gears image"
+          alt="question mark icon"
           class="nav-image"
         />
         <a href="./quiz.html" class="navbar-brand text-dark">Trivia Game</a>
@@ -52,7 +52,7 @@
             |
             <button class="no-button" id="logout">logout</button>
           {{else}}
-            <a href="/login">login</a>
+            <a href="./login.html" class="nav-link text-dark">Log in</a>
           {{/if}}
         </nav>
       </header>
