--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,26 +1,11 @@
-{{!-- <html lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trivia Game Login</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <title>Document</title>
   </head>
-  <body> --}}
+  <body>
     <section class="p-5 m-5">
       <div class="container">
         <div class="row text-center justify-content-center align-items-center">
@@ -30,13 +15,6 @@
             <br />
             while you chat with friends.
           </h4>
-          <div class="col-md-4 p-5">
-            <img
-              src="../public/assets/image.png"
-              alt="welcome image"
-              class="login-image"
-            />
-          </div>
           <div class="col-md-6 p-5">
             <div class="card text-light user-card">
               <div class="card-body text-center login-card">
@@ -79,5 +57,5 @@
       </div>
     </section>
     <script src="/js/login.js"></script>
-  {{!-- </body>
-</html> --}}
+  </body>
+</html>
