--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
   <div class="categories-container">
     <div class="row text-center mb-5">
       <div class="col">
-        <h1 class=".choose-category-head">Choose a category to play</h1>
+        <h1 class="choose-category">Choose a category to play</h1>
       </div>
     </div>
     <div class="row row-cols-md-3 text-center g-5">
