--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,22 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <script defer src="/js/quiz.js"></script>
+
   </head>
   <body>
     <nav class="navbar navbar-expand navbar-dark py-2 fixed-top text-dark">
@@ -37,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto text-dark">
             <li class="nav-item text-dark">
-              <a href="./login.html" class="nav-link text-dark">Log out</a>
+              <a href="./login.html" class="nav-link text-dark">Log in</a>
             </li>
           </ul>
         </div>
@@ -68,4 +82,5 @@
       <script src="/js/logout.js"></script>
     {{/if}}
   </body>
+  <script src="/js/quiz.js"></script>
 </html>
