fixed some routes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
             <h3 class="card-title mb-3"></h3>
             <p class="card-text text-dark sign-up">
               Don't have an account?
-              <a href="./login">Sign up</a>
+              <a href="/signup">Sign up</a>
             </p>
             <form class="login-form text-dark p-3">
               <div class="form-floating user-input mb-3">
@@ -38,7 +38,7 @@
                 <label for="exampleInputPassword1">Password</label>
               </div>
               <button type="submit" class="btn btn-dark login-btn">
-                Log in
+                <a href="/">Log in</a>
               </button>
             </form>
           </div>
@@ -47,4 +47,4 @@
     </div>
   </div>
 </section>
-{{! <script src="/js/login.js"></script> }}
+<script src="./js/login.js"></script>
