--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -19,7 +19,6 @@
                   checked
                 />
                 <label class="form-check-label" for="exampleRadios1">
-
                 </label>
               </div>
               <div class="form-check">
@@ -70,3 +69,4 @@
     </div>
   </div>
 </section>
+<script src="./js/quiz.js"></script>
