--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,13 +61,13 @@
       <header class="display-flex justify-space-between align-center p-2">
         <nav>
           <!-- Conditionally render login or logout links -->
-          {{!-- {{#if logged_in}}
+          {{#if logged_in}}
             <a href="/homepage">Profile</a>
             |
             <button class="no-button" id="logout">Log out</button>
           {{else}}
             <a href="./login.html" class="nav-link text-dark">Log in</a>
-          {{/if}} --}}
+          {{/if}}
         </nav>
       </header>
       <main class="container container-fluid mt-5">
@@ -78,9 +78,9 @@
       </footer>
     </div>
     <!-- Render script for logged in users only -->
-    {{!-- {{#if logged_in}}
+    {{#if logged_in}}
       <script src="/js/logout.js"></script>
-    {{/if}} --}}
+    {{/if}}
   </body>
-  {{! <script src="/js/quiz.js"></script> }}
+
 </html>
