--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,27 @@
 <section class="p-5 m-5">
   <div class="container">
-    <div class="row text-center g-4 justify-content-center">
-      <div class="col-md-5">
-        <div class="card bg-dark text-light login-card">
-          <div class="card-body text-center">
+    <div class="row text-center justify-content-center align-items-center">
+      <h1 class="logo">Trivia Game</h1>
+      <h4>
+        Test your knowledge in different categories
+        <br />
+        while you chat with friends.
+      </h4>
+      <div class="col-md-6 p-5">
+        <div class="card text-light user-card">
+          <div class="card-body text-center login-card">
             <div class="h1 mb-3">
-              <i class="bi bi-emoji-sunglasses"></i>
             </div>
-            <h3 class="card-title mb-3">Trivia Game</h3>
-            <p class="card-text">Sign up to play.</p>
-            <form class="signup-form text-dark p-3">
+            <h3 class="card-title mb-3"></h3>
+            <p class="card-text text-dark sign-up">
+              Sign up to play
+            </p>
+            <form class="login-form text-dark p-3">
               <div class="form-floating user-input mb-3">
                 <input
                   type="email"
                   class="form-control"
-                  id="email-signup"
+                  id="email-login"
                   aria-describedby="emailHelp"
                   placeholder="Email"
                 />
@@ -24,13 +31,13 @@
                 <input
                   type="password"
                   class="form-control"
-                  id="password-signup"
+                  id="password-login"
                   placeholder="Password"
                 />
                 <label for="exampleInputPassword1">Password</label>
               </div>
               <button type="submit" class="btn btn-dark login-btn">
-                Sign up
+                <a href="/">Sign up</a>
               </button>
             </form>
           </div>
@@ -39,4 +46,5 @@
     </div>
   </div>
 </section>
-<script src="/js/signup.js"></script>
+<script src="./js/login.js"></script>
+<script src="./js/signup.js"></script>
