--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -1,9 +1,6 @@
 <section class="p-5 m-5">
-  <div class="question-container hide">
+  <div class="question-container">
     <div class="row text-center g-4 justify-content-center align-top">
-      <div class="col-4">
-        <img src="/assets/lightbulbs.png" alt="" />
-      </div>
       <div class="col-md-8">
         <div class="card question-card text-dark m-5" id="question-card">
           <div class="card-body text-center">
