--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,12 @@
 body {
-  font-family: "Shrikhand", cursive;
+  font-family: "Electrolize", sans-serif;
 }
 
-.card-body {
-  font-family: "Kavoon", cursive;
+.category-font {
+  /* font-family: "Kavoon", cursive; */
+  font-family: "Electrolize", sans-serif;
+  font-weight: bold;
+  font-size: larger;
 }
 
 i {
@@ -13,15 +16,17 @@ i {
 .navbar {
   background: linear-gradient(
     111.5deg,
-    rgb(228, 247, 255) 21.9%,
+    rgb(208, 238, 236) 21.9%,
     rgb(255, 216, 194) 92.2%
   );
+  opacity: 0.8;
   transition: top 0.3s;
 }
 
 .nav-image {
   width: 50px;
   margin-right: 20px;
+  border-radius: 10px;
 }
 .navbar-brand {
   font-weight: bold;
@@ -66,8 +71,8 @@ a {
 
 #geography,
 .geography {
-  background: #37cdc5;
-  border: 5px solid #37cdc5;
+  background: #0aaaea;
+  border: 5px solid #0aaaea;
   border-radius: 20px;
 }
 
@@ -76,10 +81,6 @@ a {
   background: #ffdc81;
   border: 5px solid #ffdc81;
   border-radius: 20px;
-}
-
-.hide {
-  display: none;
 }
 
 .category-card {
@@ -101,10 +102,13 @@ a {
 }
 
 .logo {
-  /* font-family: "Fredoka", sans-serif; */
-  font-family: "Shrikhand", cursive;
+  /* font-family: "Shrikhand", cursive; */
+  /* font-family: "kavoon", cursive;
   font-size: 48px;
+  font-weight: bold; */
+  font-family: "Electrolize", sans-serif;
   font-weight: bold;
+  font-size: 50px;
 }
 
 body,
@@ -118,4 +122,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.user-card {
+  background-color: #00d5b9;
 }
