--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,13 +2,13 @@
   <div class="categories-container">
     <div class="row text-center mb-5">
       <div class="col">
-        <h1 class="choose-category">Choose a category to play</h1>
+        <h1 class="choose-category logo">Choose a category to play</h1>
       </div>
     </div>
-    <div class="row row-cols-md-3 text-center g-5">
-      <div class="col-md">
+    <div class="row row-cols-lg-3 text-center g-5">
+      <div class="col-lg">
         <div class="card category-card text-dark science" id="science">
-          <div class="card-body text-center">
+          <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <i class="bi bi-search"></i>
             </div>
@@ -16,9 +16,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md">
+      <div class="col-lg">
         <div class="card category-card text-dark music" id="music">
-          <div class="card-body text-center">
+          <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <i class="bi bi-music-note-beamed"></i>
             </div>
@@ -26,9 +26,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md">
+      <div class="col-lg">
         <div class="card category-card text-dark film-tv" id="film-tv">
-          <div class="card-body text-center">
+          <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <i class="bi bi-film"></i>
             </div>
@@ -36,9 +36,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md">
+      <div class="col-lg">
         <div class="card category-card text-dark food-drink" id="food-drink">
-          <div class="card-body text-center">
+          <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <i class="bi bi-cup-straw"></i>
             </div>
@@ -46,9 +46,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md">
+      <div class="col-lg">
         <div class="card category-card text-dark geography" id="geography">
-          <div class="card-body text-center">
+          <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <i class="bi bi-globe"></i>
             </div>
@@ -56,9 +56,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md">
+      <div class="col-lg">
         <div class="card category-card text-dark general" id="general">
-          <div class="card-body text-center">
+          <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <i class="bi bi-patch-question"></i>
             </div>
