--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,18 @@
       href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
   </head>
@@ -51,36 +63,23 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto text-dark">
             <li class="nav-item text-dark">
-              <a href="./login" class="nav-link text-dark">Log in</a>
+              {{#if logged_in}}
+                <a href="./login" class="nav-link text-dark">Log in</a>
+              {{else}}
+                <a href="./login.html" class="nav-link text-dark">Log in</a>
+              {{/if}}
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="flex-column justify-space-around">
-      <header class="display-flex justify-space-between align-center p-2">
-        <nav>
-          <!-- Conditionally render login or logout links -->
-          {{#if logged_in}}
-            <a href="/homepage">Profile</a>
-            |
-            <button class="no-button" id="logout">Log out</button>
-          {{else}}
-            <a href="./login.html" class="nav-link text-dark">Log in</a>
-          {{/if}}
-        </nav>
-      </header>
-      <main class="container container-fluid mt-5">
-        <!-- Render the sub layout -->
-        {{{body}}}
-      </main>
-      <footer>
-      </footer>
-    </div>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{body}}}
+    </main>
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
       <script src="/js/logout.js"></script>
     {{/if}}
   </body>
-
 </html>
