--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,50 +1,49 @@
-<section class="p-5 m-5">
-  <div class="container">
-    <div class="row text-center justify-content-center align-items-center">
-      <h1 class="logo">Trivia Game</h1>
-      <h4>
-        Test your knowledge in different categories
-        <br />
-        while you chat with friends.
-      </h4>
-      <div class="col-md-6 p-5">
-        <div class="card text-light user-card">
-          <div class="card-body text-center login-card">
-            <div class="h1 mb-3">
-            </div>
-            <h3 class="card-title mb-3"></h3>
-            <p class="card-text text-dark sign-up">
-              Sign up to play
-            </p>
-            <form class="login-form text-dark p-3">
-              <div class="form-floating user-input mb-3">
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email-login"
-                  aria-describedby="emailHelp"
-                  placeholder="Email"
-                />
-                <label for="exampleInputEmail1">Email</label>
-              </div>
-              <div class="form-floating user-input mb-3">
-                <input
-                  type="password"
-                  class="form-control"
-                  id="password-login"
-                  placeholder="Password"
-                />
-                <label for="exampleInputPassword1">Password</label>
-              </div>
-              <button type="submit" class="btn btn-dark login-btn">
-                <a href="/">Sign up</a>
-              </button>
-            </form>
+<div class="container">
+  <div class="row text-center justify-content-center align-items-center">
+    <h1 class="logo">Trivia Game</h1>
+    <h4>
+      Test your knowledge in different categories
+      <br />
+      while you chat with friends.
+    </h4>
+    <div class="col-md-6 p-5">
+      <div class="card text-light user-card">
+        <div class="card-body text-center login-card">
+          <div class="h1 mb-3">
           </div>
+          <h3 class="card-title mb-3"></h3>
+          <p class="card-text text-dark sign-up">
+            Sign up to play
+          </p>
+          <form class="login-form text-dark p-3">
+            <div class="form-floating user-input mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="email-login"
+                aria-describedby="emailHelp"
+                placeholder="Email"
+              />
+              <label for="exampleInputEmail1">Email</label>
+            </div>
+            <div class="form-floating user-input mb-3">
+              <input
+                type="password"
+                class="form-control"
+                id="password-login"
+                placeholder="Password"
+              />
+              <label for="exampleInputPassword1">Password</label>
+            </div>
+            <button type="submit" class="btn btn-dark login-btn">
+              Sign up
+            </button>
+          </form>
         </div>
       </div>
     </div>
   </div>
-</section>
+</div>
+
 <script src="./js/login.js"></script>
 <script src="./js/signup.js"></script>
