--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,9 +10,9 @@
         <div class="card category-card text-dark science" id="science">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
-              <i class="bi bi-search"></i>
+              <img src="./assets/images/science.png" alt="beeker icon" />
             </div>
-            <h3 class="card-title mb-3">Science</h3>
+            <h3 class="card-title mb-2">Science</h3>
           </div>
         </div>
       </div>
@@ -20,9 +20,9 @@
         <div class="card category-card text-dark music" id="music">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
-              <i class="bi bi-music-note-beamed"></i>
+              <img src="./assets/images/guitar.png" alt="guitar icon" />
             </div>
-            <h3 class="card-title mb-3">Music</h3>
+            <h3 class="card-title mb-2">Music</h3>
           </div>
         </div>
       </div>
@@ -30,9 +30,9 @@
         <div class="card category-card text-dark film-tv" id="film-tv">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
-              <i class="bi bi-film"></i>
+              <img src="./assets/images/video.png" alt="film icon" />
             </div>
-            <h3 class="card-title mb-3">Film & TV</h3>
+            <h3 class="card-title mb-2">Film & TV</h3>
           </div>
         </div>
       </div>
@@ -40,9 +40,9 @@
         <div class="card category-card text-dark food-drink" id="food-drink">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
-              <i class="bi bi-cup-straw"></i>
+              <img src="./assets/images/drink.png" alt="drink icon" />
             </div>
-            <h3 class="card-title mb-3">Food & Drink</h3>
+            <h3 class="card-title mb-2">Food & Drink</h3>
           </div>
         </div>
       </div>
@@ -50,9 +50,9 @@
         <div class="card category-card text-dark geography" id="geography">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
-              <i class="bi bi-globe"></i>
+              <img src="./assets/images/globe.png" alt="globe icon" />
             </div>
-            <h3 class="card-title mb-3">Geography</h3>
+            <h3 class="card-title mb-2">Geography</h3>
           </div>
         </div>
       </div>
@@ -60,9 +60,9 @@
         <div class="card category-card text-dark general" id="general">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
-              <i class="bi bi-patch-question"></i>
+              <img src="./assets/images/book.png" alt="brain icon" />
             </div>
-            <h3 class="card-title mb-3">General Knowledge</h3>
+            <h3 class="card-title mb-2">General Knowledge</h3>
           </div>
         </div>
       </div>
