--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,7 @@
 <div class="container">
-  <div class="row text-center justify-content-center align-items-center">
+  <div
+    class="row row-md-cols-1 text-center justify-content-center align-items-center"
+  >
     <h1 class="logo">Trivia Game</h1>
     <h4>
       Test your knowledge in different categories
