--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
   background-size: cover;
 }
 
-/* body:before {
+body:before {
   content: "";
   background-image: url("../assets/images/geo.jpg");
   background-size: cover;
@@ -23,8 +23,8 @@ body {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  opacity: 0.8;
-} */
+  opacity: 0.7;
+}
 
 .category-font {
   /* font-family: "Electrolize", sans-serif; */
