--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,8 +5,8 @@
         <h1 class="choose-category logo">Choose a category to play</h1>
       </div>
     </div>
-    <div class="row row-cols-lg-3 text-center g-5">
-      <div class="col-lg">
+    <div class="row row-cols-md-3 text-center g-5">
+      <div class="col-md">
         <div class="card category-card text-dark science" id="science">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg">
+      <div class="col-md">
         <div class="card category-card text-dark music" id="music">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
@@ -26,7 +26,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg">
+      <div class="col-md">
         <div class="card category-card text-dark film-tv" id="film-tv">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg">
+      <div class="col-md">
         <div class="card category-card text-dark food-drink" id="food-drink">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg">
+      <div class="col-md">
         <div class="card category-card text-dark geography" id="geography">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg">
+      <div class="col-md">
         <div class="card category-card text-dark general" id="general">
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
