--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
-body {
-  font-family: "Electrolize", sans-serif;
+body,
+.btn {
+  font-family: "Space Mono", monospace;
 }
 
 body,
@@ -33,19 +34,18 @@ body:before {
   font-size: larger;
 }
 
+.login-form,
+.signup-form {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.login {
+  font-size: 20px;
+  font-weight: bolder;
+}
+
 i {
   text-shadow: 1px 1px 1px #332d2d;
 }
-
-/* .navbar {
-  background: linear-gradient(
-    111.5deg,
-    rgb(208, 238, 236) 21.9%,
-    rgb(255, 216, 194) 92.2%
-  );
-  opacity: 0.8;
-  transition: top 0.3s;
-} */
 
 .nav-image {
   width: 50px;
@@ -55,6 +55,7 @@ i {
 }
 .navbar-brand {
   font-weight: bold;
+  font-size: 24px;
 }
 
 h1 {
@@ -128,7 +129,7 @@ a {
 }
 
 .logo {
-  font-family: "Electrolize", sans-serif;
+  font-family: "Space Mono", monospace;
   font-weight: bold;
   font-size: 50px;
 }
