--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
   <div
     class="row row-md-cols-1 text-center justify-content-center align-items-center"
   >
-    <h1 class="logo">Trivia Game</h1>
+    <h1 class="logo mt-5">Trivia Game</h1>
     <h4>
       Test your knowledge in different categories
       <br />
@@ -17,12 +17,12 @@
           <p class="card-text text-dark sign-up">
             Sign up to play
           </p>
-          <form class="login-form text-dark p-3">
+          <form class="signup-form text-dark p-3">
             <div class="form-floating user-input mb-3">
               <input
                 type="email"
                 class="form-control"
-                id="email-login"
+                id="email-signup"
                 aria-describedby="emailHelp"
                 placeholder="Email"
               />
@@ -32,7 +32,7 @@
               <input
                 type="password"
                 class="form-control"
-                id="password-login"
+                id="password-signup"
                 placeholder="Password"
               />
               <label for="exampleInputPassword1">Password</label>
@@ -46,6 +46,4 @@
     </div>
   </div>
 </div>
-
-<script src="./js/login.js"></script>
 <script src="./js/signup.js"></script>
