push with malcolms changes

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,6 +8,7 @@
     <div class="row row-cols-md-3 text-center g-5">
       <div class="col-md">
         <div class="card category-card text-dark science" id="science">
+           
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <img src="./assets/images/science.png" alt="beeker icon" />
@@ -69,6 +70,7 @@
     </div>
   </div>
 </section>
+<script src="./js/quiz.js"></script>
 
 
     {{!-- SOCKET IO START --}}
