--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,18 @@
 <section class="p-5">
   <div class="categories-container">
     <div class="row text-center mb-5">
-      <div class="col">
-        <h1 class="choose-category logo">Choose a category to play</h1>
+      <div class="col-md">
+        {{#if logged_in}}
+          <h1 class="choose-category logo">Choose a category</h1>
+        {{else}}
+          <h1 class="choose-category logo">Login to play</h1>
+        {{/if}}
       </div>
     </div>
     <div class="row row-cols-md-3 text-center g-5">
       <div class="col-md">
         <div class="card category-card text-dark science" id="science">
-           
+
           <div class="card-body text-center category-font">
             <div class="h1 mb-3">
               <img src="./assets/images/science.png" alt="beeker icon" />
@@ -72,45 +76,32 @@
 </section>
 <script src="./js/quiz.js"></script>
 
-
-    {{!-- SOCKET IO START --}}
+{{! SOCKET IO START }}
 <style>
-  #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-  #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-  #input:focus { outline: none; }
-  #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-  #messages { list-style-type: none; margin: 0; padding: 0; }
-  #messages > li { padding: 0.5rem 1rem; }
-  #messages > li:nth-child(odd) { background: #efefef; }
+  #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed;
+  bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing:
+  border-box; backdrop-filter: blur(10px); } #input { border: none; padding: 0
+  1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; } #input:focus {
+  outline: none; } #form > button { background: #333; border: none; padding: 0
+  1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+  #messages { list-style-type: none; margin: 0; padding: 0; } #messages > li {
+  padding: 0.5rem 1rem; } #messages > li:nth-child(odd) { background: #efefef; }
 </style>
 
-  <ul id="messages"></ul>
-  <form id="form" action="">
-    <input id="input" autocomplete="off" /><button>Send</button>
-  </form>
-  {{!-- SOCKET END --}}
+<ul id="messages"></ul>
+<form id="form" action="">
+  <input id="input" autocomplete="off" /><button>Send</button>
+</form>
+{{! SOCKET END }}
 
-  {{!-- SOCKET IO START 2 --}}
-  <script src="/socket.io/socket.io.js"></script>
+{{! SOCKET IO START 2 }}
+<script src="/socket.io/socket.io.js"></script>
 <script>
-  var socket = io();
-
-  var form = document.getElementById('form');
-  var input = document.getElementById('input');
-
-  form.addEventListener('submit', function(e) {
-    e.preventDefault();
-    if (input.value) {
-      socket.emit('chat message', input.value);
-      input.value = '';
-    }
-  });
-    socket.on('chat message', function(msg) {
-    var item = document.createElement('li');
-    item.textContent = msg;
-    messages.appendChild(item);
-    window.scrollTo(0, document.body.scrollHeight);
-  })
+  var socket = io(); var form = document.getElementById('form'); var input =
+  document.getElementById('input'); form.addEventListener('submit', function(e)
+  { e.preventDefault(); if (input.value) { socket.emit('chat message',
+  input.value); input.value = ''; } }); socket.on('chat message', function(msg)
+  { var item = document.createElement('li'); item.textContent = msg;
+  messages.appendChild(item); window.scrollTo(0, document.body.scrollHeight); })
 </script>
-  {{!-- SOCKET IO END 2 --}}
+{{! SOCKET IO END 2 }}
