--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trivia</title>
+    <title>Quizard</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,13 +45,15 @@
   <body>
     <nav class="navbar navbar-expand navbar-dark py-2 fixed-top text-dark">
       <div class="container">
-        <img
-          src="/assets/images/icon.jpg
+        {{#if logged_in}}
+          <img
+            src="/assets/images/icon.jpg
           "
-          alt="question mark icon"
-          class="nav-image"
-        />
-        <a href="/" class="navbar-brand text-dark">Trivia Game</a>
+            alt="question mark icon"
+            class="nav-image"
+          />
+          <a href="/" class="navbar-brand text-dark">Quizard</a>
+        {{/if}}
         <button
           class="navbar-toggler"
           type="button"
@@ -62,9 +64,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto text-dark">
-            <li class="nav-item text-dark">
+            <li class="nav-item-logout text-dark">
               {{#if logged_in}}
-                <button class="no-button" id="logout">Log out</button>
+                <a href="/login" class="text-dark logout">Log out</a>
               {{else}}
                 <a href="/login" class="text-dark login">Log in</a>
               {{/if}}
