--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
   <div
     class="row row-md-cols-1 text-center justify-content-center align-items-center"
   >
-    <h1 class="logo mt-5">Trivia Game</h1>
+    <h1 class="logo mt-5">Quizard</h1>
     <h4>
       Test your knowledge in different categories
       <br />
@@ -16,7 +16,7 @@
           <h3 class="card-title mb-3"></h3>
           <p class="card-text text-light sign-up">
             Don't have an account?
-            <a href="/signup">Sign up</a>
+            <a href="/signup" class="signup-link">Sign up</a>
           </p>
           <form class="login-form text-dark p-3">
             <div class="form-floating user-input mb-3">
