--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -16,6 +16,7 @@
                   checked
                 />
                 <label class="form-check-label" for="exampleRadios1">
+                  {{answerA}}
                 </label>
               </div>
               <div class="form-check">
@@ -27,7 +28,7 @@
                   value="option2"
                 />
                 <label class="form-check-label" for="exampleRadios2">
-                  <!-- Answer 2 -->
+                  {{answerB}}
                 </label>
               </div>
               <div class="form-check">
@@ -39,7 +40,7 @@
                   value="option2"
                 />
                 <label class="form-check-label" for="exampleRadios2">
-                  <!-- Answer 3 -->
+                  {{answerC}}
                 </label>
               </div>
               <div class="form-check">
@@ -51,7 +52,7 @@
                   value="option2"
                 />
                 <label class="form-check-label" for="exampleRadios2">
-                  <!-- Answer 4 -->
+                  {{answerD}}
                 </label>
               </div>
             </div>
