--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
   <div
     class="row row-md-cols-1 text-center justify-content-center align-items-center"
   >
-    <h1 class="logo mt-5">Trivia Game</h1>
+    <h1 class="logo mt-5">Quizard</h1>
     <h4>
       Test your knowledge in different categories
       <br />
@@ -14,7 +14,7 @@
           <div class="h1 mb-3">
           </div>
           <h3 class="card-title mb-3"></h3>
-          <p class="card-text text-dark sign-up">
+          <p class="card-text text-light sign-up">
             Sign up to play
           </p>
           <form class="signup-form text-dark p-3">
