--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -4,7 +4,10 @@
       <div class="col-md-8">
         <div class="card question-card text-dark m-5" id="question-card">
           <div class="card-body text-center">
-            <h3 class="card-title mb-3" id="generate-question">{{question}}</h3>
+            <h3
+              class="card-title mb-3"
+              id="generate-question"
+            >{{Quiz.dataValues.question}}</h3>
             <div class="answer-buttons">
               <div class="form-check">
                 <input
