--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -74,7 +74,7 @@
     </div>
   </div>
 </section>
-<script src="./js/quiz.js"></script>
+<script src="/js/quiz.js"></script>
 
 {{! SOCKET IO START }}
 <style>
