--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -81,7 +81,7 @@
     </main>
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
-      <script src="./js/logout.js"></script>
+      <script src="/js/logout.js"></script>
     {{/if}}
 
   </body>
