--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -67,7 +67,7 @@
                 <button
                   type="button"
                   id="questionbtn"
-                  class="btn btn-dark mt-3"
+                  class="btn btn-dark mt-3 text-center"
                 >
                   Submit
                 </button>
@@ -79,4 +79,4 @@
     </div>
   </div>
 </section>
-<script src="./js/quiz.js"></script>
+<script src="/js/quiz.js"></script>
