--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -20,7 +20,6 @@
                     name="exampleRadios"
                     id="exampleRadios1"
                     value="option1"
-                    checked
                   />
                   <label class="form-check-label" for="exampleRadios1">
                     {{answerA}}
@@ -79,4 +78,4 @@
     </div>
   </div>
 </section>
-<script src="./js/quiz.js"></script>
+<script src="/js/quiz.js"></script>
